#437 Fix styles of Media popup on Firefox

--- a/src/controls/Embedded/Component/styles.css
+++ b/src/controls/Embedded/Component/styles.css
@@ -92,7 +92,7 @@
   justify-content: space-between;
 }
 .rdw-embedded-modal-size-input {
-  width: 80%;
+  width: 40%;
   height: 20px;
   border: 1px solid #F1F1F1;
   border-radius: 2px;
