--- a/src/controls/Media/Component/styles.css
+++ b/src/controls/Media/Component/styles.css
@@ -11,7 +11,6 @@
   display: flex;
   flex-direction: column;
   width: 235px;
-  height: 200px;
   border: 1px solid #F1F1F1;
   padding: 15px;
   border-radius: 2px;
